# ai-researcher-agent

./: 01-backend-main (1).patch  02-frontend-edits.patch  DEPLOYMENT.md  README.md  friendly-rate-limit-message.patch  groq-migration.patch  markdown-render.patch  pdf-truncate-and-logging.patch  sanitize-pdf-url.patch  show-real-errors (1).patch
ai-researcher-backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  SPACE_README.md  arxiv_tool.py  main.py  pyproject.toml  read_pdf.py  render.yaml  requirements.txt  write_pdf.py
ai-researcher-frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
ai-researcher-frontend/app/: globals.css  layout.tsx  page.tsx
ai-researcher-frontend/components/: ApiKeySettings.tsx  ChatMessageItem.tsx  ChatPanel.tsx  Header.tsx  PaperCard.tsx  StatusBadge.tsx  ToolResultBlock.tsx
ai-researcher-frontend/lib/: api.ts  groqKey.ts  types.ts
