[project]
name = "ai-researcher-backend"
version = "0.1.0"
description = "FastAPI wrapper exposing the AI Researcher LangGraph agent and its tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.0.0",
    "langgraph>=1.2.8",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "pydantic>=2.7.0",
]
